[package]
name = "kv_server_week2"
version = "0.1.0"
authors = ["Mrzho"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "server"
path = "src/bin/server_main.rs"

[[bin]]
name = "client"
path = "src/bin/client_main.rs"

[[bin]]
name = "client_test"
path = "src/bin/client_test_main.rs"

[[bin]]
name = "client_mt"
path = "src/bin/client_multithread_main.rs"

[dependencies]
protobuf = "2.0.2"
futures = "0.1.16"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
crossbeam-channel = "0.2"
chrono = "0.4"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[build-dependencies]
protoc-grpcio = "1.0.1"

